<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F1F1F1"
    android:layout_marginBottom="50dp"
    android:padding="5dp"
    tools:context=".fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/homeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/coronaImg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="8dp"
                android:src="@drawable/corona" />

            <Button
                android:id="@+id/homeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/instruction1"
                android:textAlignment="center"
                android:textColor="#FFF" />

            <ImageView
                android:id="@+id/helpImg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:padding="8dp"
                android:src="@drawable/helpline" />

            <Button
                android:id="@+id/helpBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:padding="8dp"
                android:text="@string/helpline_numbers"
                android:textColor="#FFF"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/appInfo"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>