<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp"
    android:background="#F1F1F1"
    android:padding="5dp"
    tools:context=".fragment.GuidelinesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/title1"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:drawableEnd="@drawable/ic_download"
                android:drawableRight="@drawable/ic_download"
                android:drawablePadding="10dp"
                android:drawableTint="#FFF"
                android:padding="8dp"
                android:text="@string/guidelines"
                android:textColor="#FFF" />

            <RelativeLayout
                android:id="@+id/homeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="25dp">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="8dp"
                    android:text="For more information, visit website:"
                    android:textColor="#000"
                    android:textSize="18sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text3"
                    android:layout_margin="5dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center_horizontal"
                    android:padding="8dp"
                    android:text="@string/link"
                    android:textAlignment="center"
                    android:textColor="#FFF" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:padding="8dp"
                android:text="@string/appInfo"
                android:textAlignment="center" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>